# i2pd-webconsole-exporter

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile.build  LICENSE  README.md  build-static-linux-docker.sh
.githooks/: pre-commit
.github/workflows/: build.yml  lint.yml  test.yml
src/: main.rs
