[package]
name = "i2pd-webconsole-exporter"
version = "1.0.6"
edition = "2021"
authors = ["The i2pd-webconsole-exporter Contributors"]
description = "Prometheus exporter for i2pd (via Web Console scraping)" # Placeholder description
license = "MIT"
repository = "https://github.com/your-username/i2pd-webconsole-exporter" # Placeholder repository
keywords = ["i2p", "i2pd", "prometheus", "exporter", "monitoring", "scraping"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
env_logger = "0.11"
log = "0.4"
warp = "0.3"
regex = "1"

[profile.release]
opt-level = 'z'      # Optimize for size
lto = true           # Enable link-time optimization
codegen-units = 1    # Reduce parallel code generation units for better optimization
panic = 'abort'      # Abort on panic for smaller binary size
strip = true         # Strip symbols from binary

[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
